--- a/index.html
+++ b/index.html
@@ -5,23 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <div class="todo">
     <div class="todo__content">
-        <h1 class="todo__title">Все задачи</h1>
+        <h1 class="todo__title">Todo List</h1>
         <div class="todo__new">
             <input id="new" type="text" placeholder="Новая задача">
             <div id="add" class="todo__add">+</div>
         </div>
-        <div class="todo__tasks-count">
+        <div class="todo_btn btn">
+            <button class="btn__all">All</button>
+            <button class="btn__completed">Completed</button>
+            <button class="btn__notcompleted">Not completed</button>
+        </div>
+        <!-- <div class="todo__tasks-count">
             <span>Всего задач:</span>
             <strong id="count">0</strong>
-        </div>
+        </div> -->
         <div id="tasks" class="todo__list">
         </div>
     </div>
+    <div class="todo__pagination">
+<!--         
+        <button class="pagination__page_1">2</button>
+        <button class="pagination__page_1">...</button> -->
+    </div>
 </div>
+
     <script src="script.js"></script>
 </body>
 </html>
