--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
     </div>
     <div class="todo__pagination">
-<!--         
+        <!-- <button class="pagination__page_1">1</button>
         <button class="pagination__page_1">2</button>
-        <button class="pagination__page_1">...</button> -->
+        <button class="pagination__page_1">...</button>  -->
     </div>
 </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
