--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <div id="add" class="todo__add">+</div>
         </div>
         <div class="todo_btn btn">
+            <label class="btn__checkbox" type="checkbox">
+                <input type="checkbox">
+                <div class="btn__checkbox-div"></div>
+            </label>
             <button class="btn__all">All</button>
             <button class="btn__completed">Completed</button>
             <button class="btn__notcompleted">Not completed</button>
