count all/comleted/not completed

--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
                 <input type="checkbox">
                 <div class="btn__checkbox-div"></div>
             </label>
-            <button class="btn__all">All</button>
-            <button class="btn__completed">Completed</button>
-            <button class="btn__notcompleted">Not completed</button>
+            <button class="btn__all">
+                All
+                <div id="count__all"></div>
+            </button>
+            <button class="btn__completed">
+                Completed
+                <div id="count__completed"></div>
+            </button>
+            <button class="btn__notcompleted">
+                Not completed
+                <div id="count__notcompleted"></div>
+            </button>
         </div>
         <!-- <div class="todo__tasks-count">
             <span>Всего задач:</span>
