--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div id="add" class="todo__add">+</div>
         </div>
         <div class="todo_btn btn">
-            <label class="btn__checkbox" type="checkbox">
-                <input type="checkbox">
+            <label class="btn__checkbox">
+                <input type="checkbox" id="completeAll">
                 <div class="btn__checkbox-div"></div>
             </label>
             <button class="btn__all">
@@ -31,6 +31,9 @@
             <button class="btn__notcompleted">
                 Not completed
                 <div id="count__notcompleted"></div>
+            </button>
+            <button class="btn__delete-completed">
+                Delete Completed
             </button>
         </div>
         <!-- <div class="todo__tasks-count">
