--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="todo__content">
         <h1 class="todo__title">Todo List</h1>
         <div class="todo__new">
-            <input id="new" type="text" placeholder="Новая задача">
+            <input id="input" type="text" placeholder="Новая задача">
             <div id="add" class="todo__add">+</div>
         </div>
         <div class="todo__filters">
@@ -22,7 +22,7 @@
           </div>
           <button id="mark-all" class="todo__mark-all">Mark all</button>
           <button id="clear-completed" class="todo__clear-completed">Delete completed</button>
-        <div id="tasks" class="todo__list">
+        <div id="container" class="todo__list">
         </div>
     </div>
     <div class="todo__pagination">
